--- a/index.html
+++ b/index.html
@@ -11,109 +11,134 @@
     </head>
     <body>
 
-        <div class="app">
-            <!-- Panneau gauche -->
+        <!-- Barre du haut -->
+        <header class="toolbar panel">
+            <div class="row" style="gap:8px;align-items:center;flex-wrap:wrap">
+                <input id="search" type="search"
+                    placeholder="Rechercher un titre / artiste…" />
+                <select id="playlistFilter"
+                    title="Filtrer par playlist"></select>
+
+                <button id="exportBtn" class="btn">Exporter</button>
+                <label for="importJson" class="btn">Importer</label>
+                <input id="importJson" type="file" accept="application/json"
+                    hidden />
+
+                <button id="openYtModal" class="btn">+ Depuis YouTube</button>
+            </div>
+        </header>
+
+        <!-- Contenu principal -->
+        <main class="layout">
+            <!-- Colonne gauche : playlists + import local -->
             <aside class="left panel">
-                <!-- Branding -->
-                <div class="brand">
-                    <div class="logo"></div>
-                    <h1>Postify <span class="muted">(local)</span></h1>
+                <h3>Playlists</h3>
+                <div id="playlistList" class="vlist"
+                    style="margin-top:8px"></div>
+
+                <div class="divider" style="margin:16px 0"></div>
+
+                <h3>Créer une playlist</h3>
+                <div class="row" style="gap:8px;margin-top:8px">
+                    <input id="newPlaylistName" type="text"
+                        placeholder="Nom de playlist" />
+                    <button id="createPlaylistBtn" class="btn">Créer</button>
                 </div>
 
-                <!-- Nouvelle playlist -->
-                <div class="section">
-                    <h2>Nouvelle playlist</h2>
-                    <div class="row">
-                        <input id="newPlaylistName" type="text"
-                            placeholder="Nom de playlist" />
-                        <button id="createPlaylistBtn">Créer</button>
-                    </div>
+                <div class="divider" style="margin:16px 0"></div>
+
+                <h3>Importer un titre (local)</h3>
+                <div class="row" style="gap:8px;margin-top:8px">
+                    <input id="audioFile" type="file"
+                        accept="audio/*,video/*" />
+                </div>
+                <div class="row" style="gap:8px;margin-top:8px">
+                    <input id="trackTitle" type="text" placeholder="Titre" />
+                    <input id="trackArtist" type="text" placeholder="Artiste" />
+                </div>
+                <div class="row" style="gap:8px;margin-top:8px">
+                    <label class="pill">
+                        <input id="coverFile" type="file" accept="image/*" />
+                        <span>+ Couverture</span>
+                    </label>
+                    <button id="saveTrackBtn" class="btn">Ajouter</button>
                 </div>
 
-                <!-- Liste playlists -->
-                <div class="section playlists">
-                    <h2>Playlists</h2>
-                    <div id="playlistList"></div>
-                </div>
-
-                <!-- Import titre -->
-                <div class="section">
-                    <h2>Importer un titre</h2>
-                    <div class="stack">
-                        <div class="pill"><label for="audioFile">+ Audio
-                                (fichier)</label><input id="audioFile"
-                                type="file" accept="audio/*,video/*" /></div>
-                        <div class="pill"><label for="coverFile">+
-                                Couverture</label><input id="coverFile"
-                                type="file" accept="image/*" /></div>
-                    </div>
-                    <div style="margin-top:8px" class="row">
-                        <input id="trackTitle" type="text"
-                            placeholder="Titre" />
-                        <input id="trackArtist" type="text"
-                            placeholder="Artiste" />
-                    </div>
-                    <div class="row">
-                        <button id="saveTrackBtn">Enregistrer le titre</button>
-                    </div>
-                    <!-- Import depuis YouTube -->
-                    <details style="margin-top:8px">
-                        <summary class="muted">Ajouter depuis YouTube
-                            (téléchargement MP3)</summary>
-                        <div class="row" style="margin-top:8px">
-                            <input id="ytUrl" type="url"
-                                placeholder="URL YouTube" />
-                        </div>
-                        <div class="row" style="margin-top:8px">
-                            <input id="ytTitle" type="text"
-                                placeholder="Titre (optionnel)" />
-                            <input id="ytArtist" type="text"
-                                placeholder="Artiste (optionnel)" />
-                        </div>
-                        <div class="row" style="margin-top:8px">
-                            <button id="downloadYtBtn">Télécharger &
-                                Ajouter</button>
-                        </div>
-                        <small class="muted">⚠️ Utilisation personnelle
-                            uniquement. Nécessite ton backend actif.</small>
-                    </details>
-                </div>
+                <p class="muted" style="margin-top:10px">
+                    Astuce : ces titres sont stockés <em>localement</em>
+                    (IndexedDB).
+                    Les ajouts YouTube seront hébergés sur Google Drive via ton
+                    backend.
+                </p>
             </aside>
 
-            <!-- Panneau principal -->
-            <main class="main panel">
-                <div class="toolbar">
-                    <input id="search" type="text"
-                        placeholder="Rechercher titres…" />
-                    <select id="playlistFilter"></select>
-                    <button id="exportBtn">Exporter</button>
-                    <label class="btn nowrap" for="importJson">Importer
-                        JSON</label>
-                    <input id="importJson" type="file" accept="application/json"
-                        hidden>
-                </div>
+            <!-- Zone centrale : grille des titres -->
+            <section class="center panel">
                 <div id="grid" class="grid"></div>
-            </main>
-        </div>
+            </section>
+        </main>
 
-        <div class="player" hidden>
-            <div class="miniCover"><img id="playerCover" alt /></div>
-            <div>
-                <div class="title" id="playerTitle">—</div>
-                <div class="muted"><span id="curTime" class="time">0:00</span> ·
-                    <span id="durTime" class="time">0:00</span></div>
+        <!-- Player bas de page -->
+        <footer class="player panel" hidden>
+            <img id="playerCover" alt width="48" height="48" />
+            <div class="info">
+                <div id="playerTitle" class="title">—</div>
+                <div class="muted"><span id="curTime">0:00</span> / <span
+                        id="durTime">0:00</span></div>
             </div>
             <div class="controls">
-                <button id="prevBtn">⏮</button>
-                <button id="playPauseBtn">▶</button>
-                <button id="nextBtn">⏭</button>
-                <button id="stopBtn" class="danger">■</button>
+                <button id="prevBtn" class="btn">⏮</button>
+                <button id="playPauseBtn" class="btn">▶</button>
+                <button id="nextBtn" class="btn">⏭</button>
+                <button id="stopBtn" class="btn">⏹</button>
+            </div>
+        </footer>
+
+        <!-- Modal YouTube -->
+        <div id="ytModal" class="modal" aria-hidden="true" hidden>
+            <div class="modal__overlay" data-close></div>
+            <div class="modal__dialog panel">
+                <div class="modal__head">
+                    <h3>Ajouter depuis YouTube</h3>
+                    <button class="btn" data-close>✕</button>
+                </div>
+
+                <div class="modal__body">
+                    <div class="row" style="margin-top:8px">
+                        <input id="mYtUrl" type="url"
+                            placeholder="URL YouTube (https://…)" />
+                    </div>
+                    <div class="row" style="margin-top:8px">
+                        <input id="mTitle" type="text"
+                            placeholder="Titre (optionnel)" />
+                        <input id="mArtist" type="text"
+                            placeholder="Artiste (optionnel)" />
+                    </div>
+                    <div class="row" style="margin-top:8px">
+                        <label class="pill">
+                            <input id="mCover" type="file" accept="image/*" />
+                            <span>+ Couverture (optionnel)</span>
+                        </label>
+                    </div>
+                    <div class="row" style="margin-top:12px">
+                        <select id="mPlaylist"></select>
+                        <input id="mNewPlaylist" type="text"
+                            placeholder="ou créer une playlist…" />
+                    </div>
+                    <div id="mMsg" class="muted" style="margin-top:6px"></div>
+                    <p class="muted" style="margin-top:8px">
+                        Le MP3 sera uploadé dans ton dossier Google Drive via le
+                        backend.
+                    </p>
+                </div>
+
+                <div class="modal__foot">
+                    <button class="btn" data-close>Annuler</button>
+                    <button id="mSubmit" class="btn">Télécharger &
+                        Ajouter</button>
+                </div>
             </div>
         </div>
-
-        <script>
-const BACKEND_URL = "https://ton-backend.onrender.com"; 
-</script>
 
         <script src="assets/js/script.js" async defer></script>
     </body>
